[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/terminal/terminal.png" type="Texture" id=1]
[ext_resource path="res://Terminal.gd" type="Script" id=2]
[ext_resource path="res://assets/Font/Ubuntu-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/audio/codeFail.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/codeCorrect.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=2]
size = 33
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62, 48 )

[node name="Terminal" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="escText" type="Label" parent="Sprite"]
visible = false
margin_left = -62.0
margin_top = -84.0
margin_right = 60.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 2 )
text = "Press
'escape'"
align = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 2 )
shape = SubResource( 1 )

[node name="Terminal" type="LineEdit" parent="."]
margin_left = -59.0
margin_top = -76.0
margin_right = 68.0
margin_bottom = -52.0
placeholder_alpha = 0.302
caret_blink = true

[node name="codeCorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="codeFail" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Terminal_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Terminal_body_exited"]
